# SynthDoc

./: .gitignore  Makefile  README.md  pyproject.toml
src/synthdoc/: __init__.py  annotation.py  cli.py  config.py  content.py  degradation.py  engine.py  layout.py  models.py
src/synthdoc/annotation/: __init__.py  formats.py  generator.py
src/synthdoc/content/: __init__.py  figure.py  formula.py  handwriting.py  signature.py  table.py  text.py
src/synthdoc/degradation/: __init__.py  blur.py  compression.py  geometric.py  noise.py  pipeline.py  texture.py
src/synthdoc/layout/: __init__.py  composer.py  grid.py  templates.py
src/synthdoc/render/: __init__.py  html.py  pdf.py
tests/: conftest.py  test_annotation.py  test_content.py  test_degradation.py  test_engine.py  test_layout.py
